--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,13 @@
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
+body {
+	height: 100%;
+	overflow-y: scroll;
+}
+
 .container {
 	width: 565px;
 	margin-top: 25px;
