--- a/app/styles.css
+++ b/app/styles.css
@@ -24,6 +24,12 @@
 	position: absolute;
 	top: 26px;
 	left: -65px;
+	text-align: center;
+}
+
+.avatar img {
+	max-width: 48px;
+	max-height: 48px;
 	border-radius: 4px;
 }
 
