--- a/app/styles.css
+++ b/app/styles.css
@@ -10,14 +10,56 @@ body, button {
 	font: 14px/1.4 'Open Sans', Arial, sans-serif;
 }
 
+html {
+	background: url('bg.jpg') no-repeat center center;
+	background-size: cover;
+}
+
+body {
+	background: url('bg2.png') rgba(0, 0, 0, 0.4);
+}
+
 .container {
 	height: 100%;
 	overflow-y: scroll;
 }
 
+header {
+	display: none;
+}
+
 .replies {
 	margin: 0 auto;
+	padding: 0 10px;
 	max-width: 560px;
+}
+
+@media (min-width: 1380px) {
+	header {
+		display: block;
+		position: fixed;
+		top: 30%;
+		left: 50px;
+	}
+
+	header h1 {
+		margin: 0;
+		font-size: 72px;
+		font-weight: 900;
+		color: rgba(255, 255, 255, 0.5);
+	}
+
+	header h2 {
+		font-size: 24px;
+		font-weight: normal;
+		color: rgba(0, 0, 0, 0.8);
+		text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+	}
+
+	.replies {
+		margin: 0 50px 0 0;
+		float: right;
+	}
 }
 
 div {
@@ -36,14 +78,21 @@ div {
 	max-width: 430px;
 	padding: 1px 15px;
 	border-radius: 8px 8px 0 0;
-	color: #666;
-	border: 1px solid #ddd;
+	color: #333;
 	border-bottom: 0 none;
+}
+
+.quote, .text p{
+	overflow: hidden;
+}
+
+.quote {
+	background: rgba(255, 255, 255, 0.6);
 }
 
 .meta {
 	padding: 5px 8px 5px 15px;
-	background: #eee;
+	background: rgba(0, 0, 0, 0.4);
 	border: 0 none;
 	border-radius: 0 0 8px 8px;
 	line-height: 34px;
@@ -82,6 +131,10 @@ div {
 	max-width: 48px;
 	max-height: 48px;
 	border-radius: 4px;
+	background: rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 1px 3px 0 #000;
+	-moz-box-shadow: 1px 1px 3px 0 #000;
+	box-shadow: 1px 1px 3px 0 #000;
 }
 
 .user {
