--- a/app/styles.css
+++ b/app/styles.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic);
 
-html, body {
+html, body, body > div {
 	margin: 0;
 	height: 100%;
 	overflow: hidden;
