Personal autism form border

--- a/app/styles.css
+++ b/app/styles.css
@@ -184,3 +184,9 @@ footer {
 	margin-top: 25px;
 	text-align: center;
 }
+
+.personal {
+	padding-left: 10px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+}
