--- a/app/styles.css
+++ b/app/styles.css
@@ -8,6 +8,7 @@ html, body, body > div {
 
 body, button, input {
 	font: 14px/1.4 'Open Sans', Arial, sans-serif;
+	color: #fff;
 }
 
 .container {
@@ -114,6 +115,7 @@ h1 a:hover {
 	border: 0 none;
 	border-bottom: 1px solid #D39C3A;
 	color: #D39C3A;
+	background: none;
 }
 
 .nav button {
